Fix issue where settings icon was overflowing on laos font.

--- a/georegistry-web/src/main/ng2/src/app/registry/component/geoobject-shared-attribute-editor/geoobject-shared-attribute-editor.css
+++ b/georegistry-web/src/main/ng2/src/app/registry/component/geoobject-shared-attribute-editor/geoobject-shared-attribute-editor.css
@@ -19,6 +19,10 @@
 	position: absolute;
 }
 
+label.settings > span > i.fa.fa-cog {
+	font-size: 15px;
+}
+
 .full-width-radio-button .errorSpan {
   left: 2.5px;
 }
